--- a/css/style.css
+++ b/css/style.css
@@ -243,11 +243,10 @@ hr {
 
 .ridestarter_text p {
   letter-spacing: 2;
-  font-size: 24px;
+  font-size: 22px;
   text-align: left;
   color: #232323;
   font-family: sans-serif;
-  font-weight:400;
   width: 75%;
   margin: 0 auto;
   line-height: 30px;
@@ -314,7 +313,7 @@ hr {
 
 .simplebox_text p {
   letter-spacing: 2;
-  font-size: 24px;
+  font-size: 22px;
   text-align: left;
   color: #232323;
   font-family: sans-serif;
@@ -394,11 +393,10 @@ hr {
 
 .more_projects_text p {
   letter-spacing: 2;
-  font-size: 24px;
+  font-size: 22px;
   text-align: left;
   color: #232323;
-  font-family: sans-serif;
-  font-weight:400;
+  font-family:helvetica, sans-serif;
   width: 75%;
   margin: 0 auto;
   line-height: 30px;
