--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -13,9 +13,15 @@ hr {
   border-top:3px solid #7D9DBD;
 }
 
+h1 {
+  font-size: 32px;
+  font-family: cabin, sans-serif;
+  text-align: center;
+}
+
 p {
   font-family: Noto Sans, sans-serif;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 a {
@@ -143,7 +149,6 @@ a {
   font-family: helvetica, sans-serif;
   margin-right: 10px;
   margin-left: 20px;
-  font-weight: 400;
   cursor: pointer;
   letter-spacing: 1;
 }
@@ -158,7 +163,7 @@ a {
 
 @media (min-width: 640px) and (max-width: 1200px) {
   .navigation h2 {
-    font-size: 16px;
+    font-size: 14px;
     margin-left: 10px;
     margin-right: 10px;
   }
@@ -172,11 +177,6 @@ a {
   text-align: center;
   margin: 0 auto;
   width: 70%;
-}
-
-.summary_container h1 {
-  font-size: 42px;
-  font-family: cabin, sans-serif;
 }
 
 .summary_container p {
@@ -202,9 +202,9 @@ a {
 }
 
 .solution_container h1 {
-  font-size: 42px;
   font-family: cabin, sans-serif;
   color: #232323;
+  font-size: 32px;
 }
 
 .solution_container p {
@@ -220,11 +220,6 @@ a {
   text-align: center;
   margin: 0 auto;
   width: 70%;
-}
-
-.research_container h1 {
-  font-size: 42px;
-  font-family: cabin, sans-serif;
 }
 
 .research_container p {
@@ -343,11 +338,6 @@ a {
   clear: both;
 }
 
-.branding h1 {
-  font-size: 42px;
-  font-family: cabin, sans-serif;
-  text-align: center;
-}
 
 .branding p {
   text-align: left;
@@ -370,12 +360,6 @@ a {
   margin: 0 auto;
 }
 
-.low_fidelity h1 {
-  font-size: 42px;
-  font-family: cabin, sans-serif;
-  text-align: center;
-}
-
 .low_fidelity p {
   text-align: left;
 }
@@ -392,7 +376,6 @@ a {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  box-shadow: 0px 2px 5px #888888;
   width: 100%;
   margin-top: 20px;
 }
@@ -404,12 +387,6 @@ a {
 .high_fidelity {
   width: 70%;
   margin: 0 auto;
-}
-
-.high_fidelity h1 {
-  font-size: 42px;
-  font-family: cabin, sans-serif;
-  text-align: center;
 }
 
 .high_fidelity p {
@@ -442,11 +419,6 @@ a {
   margin: 0 auto;
 }
 
-.final_product h1 {
-  font-size: 42px;
-  font-family: cabin, sans-serif;
-  text-align: center;
-}
 
 .final_product p {
   text-align: left;
