--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,6 @@ hr {
 
 }
 
-
 .about_left h2 {
   font-size: 24px;
   text-align: left;
@@ -191,9 +190,13 @@ hr {
 
 @media screen and (max-width: 640px) {
   .about_container p {
-    font-size: 22px;
+    font-size: 20px;
     width: 100%;
-    text-align: left;
+    text-align: center;
+  }
+  .about_left h2 {
+    text-align: center;
+    font-size: 22px;
   }
 }
 
@@ -564,8 +567,7 @@ hr {
     width: 80%;
   }
   .contact_container p {
-    font-size: 22px;
-    text-align: center;
+    font-size: 20px;
   }
 }
 
