--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -3,14 +3,16 @@ html, body {
   padding: 0;
 }
 
-hr {
+
+.deliver_hr {
   height: 0;
   border: 0;
-  border-top:3px solid #75B46F;
+  border-top:1px solid grey;
+  margin-top:-15px;
 }
 
 p {
-  font-family: Noto Sans, sans-serif;
+  font-family: 'Catamaran', Helvetica, sans-serif;
   font-size: 18px;
   text-align: left;
   line-height: 1.8em;
@@ -20,6 +22,13 @@ h1 {
   font-size: 24px;
   font-family: 'Catamaran', Helvetica, sans-serif;
 }
+
+h3 {
+  font-size: 16px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-weight: normal;
+}
+
 
 ul li {
   margin: 15px;
@@ -37,6 +46,7 @@ ul li {
 a {
   color: #75B46F;
   text-decoration: none;
+  font-family: 'Catamaran', Helvetica, sans-serif;
 }
 
 
@@ -257,7 +267,7 @@ a {
 }
 
 .research_container {
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
   width: 60%;
 }
@@ -307,7 +317,7 @@ a {
 
 .competitive_analysis a {
   font-size: 18px;
-  font-family: Noto Sans, sans-serif;
+  font-family: 'Catamaran', Helvetica, sans-serif;
   text-align: left;
   color: #75B46F;
   text-decoration: none;
@@ -369,7 +379,7 @@ a {
 }
 
 .design_container {
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
   width: 60%;
   padding-top: 10px;
@@ -379,7 +389,7 @@ a {
 .user_flow {
   text-align: left;
   font-size: 22px;
-  font-family: cabin, sans-serif;
+  font-family: 'Catamaran', Helvetica, sans-serif;
   padding-top: 20px;
 }
 
@@ -389,7 +399,7 @@ a {
 
 .user_flow a {
   font-size: 18px;
-  font-family: Noto Sans, sans-serif;
+  font-family: 'Catamaran', Helvetica, sans-serif;
   color: #75B46F;
   text-decoration: none;
   cursor: pointer;
@@ -449,7 +459,7 @@ a {
 }
 
 .implement_container {
-  text-align: center;
+  text-align: left;
   margin: 0 auto;
   width: 60%;
   padding-top: 10px;
@@ -470,7 +480,7 @@ a {
 .user_testing {
   text-align: left;
   font-size: 22px;
-  font-family: cabin, sans-serif;
+  font-family: 'Catamaran', Helvetica, sans-serif;
   margin-top: 40px;
 }
 
@@ -494,7 +504,7 @@ a {
   width: 60%;
   padding-top: 10px;
   font-size: 22px;
-  font-family: cabin, sans-serif;
+  font-family: 'Catamaran', Helvetica, sans-serif;
 }
 
 .final_container h1 {
@@ -507,7 +517,7 @@ a {
 
 .final_container a {
   text-decoration: none;
-  font-size: 20px;
+  font-size: 18px;
   text-align: left;
   font-family: 'Catamaran', Helvetica, sans-serif;
   color: #75B46F;
