--- a/css/more_projects.css
+++ b/css/more_projects.css
@@ -27,14 +27,14 @@ html, body {
 
 .hero_container {
   position: absolute;
-  top: 280px;
+  top: 250px;
   left: 0;
   right: 0;
 }
 
 .hero_container h1 {
   letter-spacing: 5;
-  font-size: 62px;
+  font-size: 48px;
   font-family: helvetica, sans-serif;
   text-align: center;
   color: white;
@@ -76,5 +76,8 @@ html, body {
   }
   .projects {
     width: 100%;
+  }
+  .hero_container h1 {
+    font-size: 36px;
   }
 }
