--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -199,6 +199,13 @@ a {
 @media screen and (max-width: 640px) {
   .summary_container {
     width: 90%;
+    padding-top: 0px;
+  }
+}
+
+@media (min-width: 640px) and (max-width: 1200px) {
+  .summary_container {
+    width: 60%;
   }
 }
 
