--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -29,6 +29,12 @@ h3 {
   font-weight: normal;
 }
 
+h4 {
+  font-size: 14px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-weight: normal;
+}
+
 
 ul li {
   margin: 15px;
@@ -196,10 +202,34 @@ a {
   text-align: center;
 }
 
+.summary_deliver {
+  margin: 0 auto;
+  text-align: center;
+  width: 60%;
+  padding-bottom: 40px;
+}
+
+.deliver {
+  display:inline-block;
+  text-align: center;
+  float: left;
+  width: 33.33%;
+}
+
+.deliver p {
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  color:#232323;
+}
+
 @media screen and (max-width: 640px) {
   .summary_container {
     width: 90%;
     padding-top: 0px;
+  }
+  .summary_deliver {
+    width: 95%;
   }
 }
 
@@ -215,6 +245,7 @@ a {
 
 .solution_problem {
   box-shadow: 0px 2px 5px #888888;
+  clear: both;
 }
 
 .solution_container {
@@ -242,6 +273,7 @@ a {
   width:50%;
   background-color: #F0F0F0;
   padding: 3% 0;
+  clear: both;
 }
 
 .problem_container h1 {
