--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -32,6 +32,12 @@ a {
   color: #7D9DBD;
 }
 
+h4 {
+  font-size: 14px;
+  font-family: 'Catamaran', Helvetica, sans-serif;
+  font-weight: normal;
+}
+
 .underline_black {
   border-bottom: 2px solid #232323;
 }
@@ -180,10 +186,35 @@ a {
   text-align: center;
 }
 
+
+.summary_deliver {
+  margin: 0 auto;
+  text-align: center;
+  width: 60%;
+  padding-bottom: 40px;
+}
+
+.deliver {
+  display:inline-block;
+  text-align: center;
+  float: left;
+  width: 33.33%;
+}
+
+.deliver p {
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  color:#232323;
+}
+
 @media screen and (max-width: 640px) {
   .summary_container {
     width: 90%;
     padding-top: 0px;
+  }
+  .summary_deliver{
+    width: 90%;
   }
 }
 
