--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -107,11 +107,17 @@ a {
   padding: 40px 0px 0px 40px;
 }
 
-
 .fa-arrow-circle-o-left {
   color: black;
   text-decoration: none;
 }
+
+.arrow_down_container {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom:40px;
+}
+
 
 @media screen and (max-width: 640px) {
   .hero_container {
