--- a/css/simplebox.css
+++ b/css/simplebox.css
@@ -98,6 +98,12 @@ h4 {
   padding: 40px 0px 0px 40px;
 }
 
+.arrow_down_container {
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom:40px;
+}
+
 
 @media screen and (max-width: 640px) {
   .hero_container {
