--- a/css/ridestarter.css
+++ b/css/ridestarter.css
@@ -59,26 +59,34 @@ a {
 /** HERO **/
 
 .hero {
-  background-color: white;
+  background-image: url("../images/ridestarter/ridestarter_cover.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
   height: 80%;
   width: 100%;
 }
 
-.hero_container {
-  width: 80%;
-  margin: 0 auto;
-  padding-top: 100px;
+.hero_overlay {
+  background-color: black;
+  width: 100%;
+  height: 80%;
+  position: absolute;
+  opacity: 0.6;
 }
 
-.hero_container_img img {
-  background-size: cover;
-  width: 50%;
-  float: left;
+
+.hero_container {
+  left: 50%;
+  top: 40%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  width: 100%;
 }
 
 .title_container {
-  float: left;
   width: 50%;
+  margin: 0 auto;
 }
 
 .title_container h1 {
@@ -86,7 +94,7 @@ a {
   font-size: 48px;
   font-family: 'Catamaran', Helvetica, sans-serif;
   text-align: center;
-  color: #75B46F;
+  color: white;
   font-weight: 600;
   margin-bottom: 0px;
 }
@@ -95,7 +103,7 @@ a {
   letter-spacing: 1;
   font-size: 22px;
   text-align: center;
-  color: #232323;
+  color: white;
   font-family: 'Catamaran', Helvetica, sans-serif;
   width: 80%;
   margin: 0 auto;
@@ -104,7 +112,9 @@ a {
 }
 
 .arrow_back_container {
-  padding: 40px 0px 0px 40px;
+  position: absolute;
+  top: 5% ;
+  left: 3%;
 }
 
 .fa-arrow-circle-o-left {
