--- a/css/style.css
+++ b/css/style.css
@@ -83,53 +83,37 @@ a {
   margin-top: 30px;
 }
 
-.button {
-  border-radius: 8px;
-  color: #ffffff;
-  font-size: 20px;
-  width: 200px;
-  height: 53px;
-  border: solid #B4F4FF 2px;
-  text-decoration: none;
-  background: none;
-  text-align: center;
-  letter-spacing: 1;
-  cursor: pointer;
-}
-
 .top_button_container {
   position: absolute;
   right: 5%;
   top: 5%;
+
 }
 
-.button_contact {
-  border-radius: 8px;
-  color: #ffffff;
-  font-size: 20px;
-  width: 150px;
-  height: 53px;
-  border: solid #B4F4FF 2px;
-  text-decoration: none;
+.button {
+  width: 140px;
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: white;
+  background-color: #fff;
   background: none;
-  text-align: center;
-  margin-left: 20px;
-  letter-spacing: 1;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
   cursor: pointer;
+  outline: none;
 }
 
-.button_resume {
-  border-radius: 8px;
-  color: #ffffff;
-  font-size: 20px;
-  width: 150px;
-  height: 53px;
-  border: solid #B4F4FF 2px;
-  text-decoration: none;
-  background: none;
-  text-align: center;
-  letter-spacing: 1;
-  cursor: pointer;
+.button:hover {
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
 }
 
 .arrow_down_container{
@@ -148,8 +132,20 @@ a {
   .hero_container p {
     font-size: 22px;
   }
+  .arrow_down_container{
+    margin-bottom: 40px;
+  }
+  .top_button_container {
+  }
 }
 
+@media (min-width: 640px) and (max-width: 1200px) {
+
+}
+
+@media (min-width: 1440px) {
+
+}
 
 /* ABOUT */
 
@@ -270,22 +266,7 @@ a {
 
 .ridestarter_button {
   text-align: center;
-}
-
-.button_ridestarter {
-  border-radius: 8px;
-  color: #232323;
-  font-size: 20px;
-  width: 150px;
-  height: 53px;
-  border: solid #75B46F 2px;
-  text-decoration: none;
-  background: none;
-  margin-top: 30px;
-  font-family: sans-serif;
-  letter-spacing: 1;
-  margin-right: 5px;
-  cursor: pointer;
+  margin-top: 20px;
 }
 
 .ridestarter_container img {
@@ -340,22 +321,7 @@ a {
 
 .simplebox_button {
   text-align: center;
-}
-
-.button_simplebox {
-  border-radius: 8px;
-  color: #232323;
-  font-size: 20px;
-  width: 150px;
-  height: 53px;
-  border: solid #7D9DBD 2px;
-  text-decoration: none;
-  background: none;
-  margin-top: 30px;
-  font-family: sans-serif;
-  letter-spacing: 1;
-  margin-right: 5px;
-  cursor: pointer;
+  margin-top: 20px;
 }
 
 .simplebox_container img{
@@ -417,22 +383,33 @@ a {
 
 .more_projects_button {
   text-align: center;
+  margin-top: 20px;
 }
 
-.button_more {
-  border-radius: 8px;
+.button_projects {
+  width: 140px;
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
   color: #232323;
-  font-size: 20px;
-  width: 150px;
-  height: 53px;
-  border: solid #1A505A 2px;
-  text-decoration: none;
+  background-color: #fff;
   background: none;
-  margin-top: 30px;
-  font-family: sans-serif;
-  letter-spacing: 1;
-  margin-right: 5px;
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
   cursor: pointer;
+  outline: none;
+}
+
+.button_projects:hover {
+  background-color: #2EE59D;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
 }
 
 @media screen and (max-width: 640px) {
