--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ a {
 }
 
 .hero_container p {
-  letter-spacing: 3;
+  letter-spacing: 2;
   font-size: 24px;
   text-align: center;
   color: #DDDDDD;
@@ -523,6 +523,10 @@ a {
   margin: 0 auto;
   line-height: 1.8em;
   padding-bottom: 20px;
+}
+
+.contact_container .button {
+  color: #232323;
 }
 
 .button_touch {
