--- a/css/style.css
+++ b/css/style.css
@@ -435,7 +435,7 @@ a {
   letter-spacing: 4;
   font-size: 34px;
   font-family: helvetica, sans-serif;
-  color: #1A505A;
+  color: #CA6435;
   font-weight: 600;
 }
 
